# odp-core

./: NOTICE  README.md  pyproject.toml  setup.cfg  setup.py
nccrd/: version.py
nccrd/config/: __init__.py
nccrd/const/: __init__.py
odp/: client.py  logger.py  version.py
odp/api/models/: __init__.py  archive.py  audit.py  auth.py  catalog.py  client.py  collection.py  keyword.py  package.py  paging.py  provider.py  record.py  resource.py  role.py  schema.py  tag.py  user.py  vocabulary.py
odp/client/: system.py  ui.py
odp/config/: datacite.py  google.py  mixins.py  odp.py
odp/const/: __init__.py  db.py  scope.py
odp/lib/: cache.py  client.py  datacite.py  hydra.py
odp/schema/: __init__.py
odp/schema/__meta__/: schema.json  vocab.json
odp/schema/keyword/: institution.json  institution_provisional.json  sdg.json
odp/schema/metadata/ris/: citation-example.json  citation.json
odp/schema/metadata/saeon/: datacite4-template.json  datacite4.json  iso19115-template.json  iso19115.json  ris-example.json
odp/schema/metadata/schema.org/: dataset.json
odp/schema/tag/: abstract.json  bounding_box.json  contributor.json  daterange.json  daterangeinc.json  doi.json  geolocation.json  keyword.json  lineage.json  purpose.json  title.json
odp/schema/tag/record/: sdg.json
odp/schema/vocabulary/: institution.json  sdg.json
odp/vocab/: __init__.py  sdg.json
sadco/: version.py
sadco/config/: __init__.py
sadco/const/: __init__.py
somisana/config/: __init__.py
somisana/const/: __init__.py
