[metadata]
name = odp
description = Core Python library for SAEON Open Data Platform (ODP) systems development.
long_description = file: README.md
url = https://github.com/SAEON/odp-core
author = Mark Jacobson
author_email = mark@saeon.ac.za
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
include_package_data = True
python_requires = ~=3.10
install_requires =
    authlib
    flask
    flask-login
    pydantic[dotenv]
    redis
    requests
    wtforms
